--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://dpg-cm6h82un7f5s73e9b010-a.oregon-postgres.render.com/natlov_4032
-spring.datasource.username=natlov_4032_user
-spring.datasource.password=U7UCm7SPACF9GcMEwFqtFdvLWeghQ06k
+spring.datasource.url=jdbc:postgresql://dpg-cm6jq4nqd2ns73euasm0-a.oregon-postgres.render.com/natlov_cekf
+spring.datasource.username=natlov_cekf_user
+spring.datasource.password=HCi5KIK266jw5G1hfcwO0KRrfbwePSW6
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
