--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:postgresql://dpg-cm6jq4nqd2ns73euasm0-a.oregon-postgres.render.com/natlov_cekf
 spring.datasource.username=natlov_cekf_user
 spring.datasource.password=HCi5KIK266jw5G1hfcwO0KRrfbwePSW6
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
